// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assemble changes assembles deps 1`] = `
Object {
  "changes": Array [
    Object {
      "releases": Object {
        "all": "minor",
      },
      "summary": "This is a test.",
    },
  ],
  "releases": Object {
    "all": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "all": "minor",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "minor",
    },
  },
}
`;

exports[`assemble changes runs 1`] = `
Object {
  "changes": Array [
    Object {
      "releases": Object {
        "assemble1": "patch",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "assemble1": "minor",
        "assemble2": "patch",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "assemble1": "patch",
        "assemble2": "major",
      },
      "summary": "This is a test.",
    },
    Object {
      "releases": Object {
        "@namespaced/assemble2": "patch",
        "assemble1": "patch",
      },
      "summary": "This is a test.",
    },
  ],
  "releases": Object {
    "@namespaced/assemble2": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "patch",
    },
    "assemble1": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "@namespaced/assemble2": "patch",
            "assemble1": "patch",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "minor",
    },
    "assemble2": Object {
      "changes": Array [
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "minor",
            "assemble2": "patch",
          },
          "summary": "This is a test.",
        },
        Object {
          "releases": Object {
            "assemble1": "patch",
            "assemble2": "major",
          },
          "summary": "This is a test.",
        },
      ],
      "type": "major",
    },
  },
}
`;

exports[`merge config test merges nested bumps 1`] = `
Array [
  Object {
    "command": Array [
      "true",
    ],
    "dependencies": Array [
      "assemble1",
      "all",
    ],
    "manager": undefined,
    "path": "./packages/assemble1",
    "pkg": "assemble1",
    "postcommand": null,
    "precommand": null,
    "type": "minor",
  },
  Object {
    "command": Array [
      "true",
    ],
    "dependencies": Array [
      "all",
    ],
    "manager": undefined,
    "path": "./packages/assemble2",
    "pkg": "assemble2",
    "postcommand": null,
    "precommand": null,
    "type": "minor",
  },
  Object {
    "command": Array [
      "true",
    ],
    "dependencies": undefined,
    "manager": undefined,
    "path": undefined,
    "pkg": "all",
    "postcommand": null,
    "precommand": null,
    "type": "minor",
  },
]
`;

exports[`merge config test merges version 1`] = `
Array [
  Object {
    "command": Array [
      "cargo version patch",
    ],
    "dependencies": Array [
      "assemble2",
      "all",
    ],
    "manager": "cargo",
    "path": "./packages/namespaced-assemble2",
    "pkg": "@namespaced/assemble2",
    "postcommand": null,
    "precommand": null,
    "type": "patch",
  },
  Object {
    "command": Array [
      "lerna version minor --no-git-tag-version --no-push",
    ],
    "dependencies": Array [
      "all",
    ],
    "manager": "javascript",
    "path": "./packages/assemble1",
    "pkg": "assemble1",
    "postcommand": null,
    "precommand": null,
    "type": "minor",
  },
  Object {
    "command": Array [
      "lerna version major",
    ],
    "dependencies": Array [
      "all",
    ],
    "manager": undefined,
    "path": "./packages/assemble2",
    "pkg": "assemble2",
    "postcommand": null,
    "precommand": null,
    "type": "major",
  },
]
`;

exports[`merge config test merges version without command 1`] = `Array []`;
